Import changes (split 'about' page, embed preview, fix top&bottom whitespace)

--- a/css/custom.css
+++ b/css/custom.css
@@ -19,6 +19,12 @@ hr {
   margin-bottom: 40px;
 }
 
+body {
+  margin-bottom: 30px;
+}
+.navbar-static-top {
+  margin-bottom: 0px;
+}
 .bird-entry > .bird-image > img {
   width: 100%;
   height: 180px;
